# testing_playground

./: .gitignore  invert_meeee.txt  invert_meeee_inv.txt  pyproject.toml
testing/: __init__.py  __main__.py  cli_tool.py
testing/db_functions/: functions.py
testing/file_functions/: __init__.py  functions.py  io.py
testing/number_functions/: functions.py
tests/: test_unit.py
tests/test_db_functions/: mock_db.csv  mock_table.csv  test_db_functions.py  test_db_with_mock_db.py  test_db_with_mock_execution.py
tests/test_file_functions/: test_invert_file.py
tests/test_file_functions/mock_files/: expected_output.txt  to_invert.txt  to_invert_inv.txt
tests/test_number_functions/: test_number_unit.py  test_unit.py
