[tool.poetry]
name = "testing"
version = "0.1.0"
description = ""
authors = ["Rafael Lucena"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.2"
click = "^8.1.3"
psycopg2 = "^2.9.5"
pandas = "^1.5.3"
sqlalchemy = "^2.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
